# apollo-router-jwt-validation-plugin

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml  router.yaml  supergraph-schema.graphql
e2e/: index.js  package-lock.json  package.json
src/: main.rs
src/plugins/: jwt_validation_plugin.rs  mod.rs
