[package]
name = "router-extension-jwt-validation"
version = "0.0.1"
edition = "2021"
license = "MIT"

[[bin]]
name = "router"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.55"
apollo-router = "1.8.0"
async-trait = "0.1.52"
futures = "0.3.21"
jsonwebtoken = "8"
reqwest = {version="0.11.11"}
schemars = "0.8.10"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tracing = "0.1.34"
base64 = "0.13.1"
